Train First Model on Several Subjects
DataPipe.ipynb trains a simple model on 4 subjects. Added model.py, which will be have all
model architectures in future.

--- a/config.json
+++ b/config.json
@@ -1,10 +1,9 @@
 {
     "settings": {
-        "datapath": "/"
+        "datapath": "/Users/eddiechandler/Documents/WashU/Neurotechnology_Club/Data/OneDrive-2020-11-28-2"
     },
 
     "data": {
-
-        "subjects": []
+        "subjects": ["bradley", "johnathan", "vishal", "parker"]
     }
 }
