--- a/config.json
+++ b/config.json
@@ -1,9 +1,22 @@
 {
     "settings": {
-        "datapath": "/Users/eddiechandler/Documents/WashU/Neurotechnology_Club/Data/OneDrive-2020-11-28-2/"
+        "root_path": "/Users/eddiechandler/Documents/WashU/Neurotechnology_Club/neurotech-club-eeg/",
+        "data_path": "/Users/eddiechandler/Documents/WashU/Neurotechnology_Club/Data/OneDrive-2020-11-28-2/"
     },
 
     "data": {
         "subjects": ["bradley", "johnathan", "vishal", "parker"]
+    },
+
+    "model": {
+        "model_type": "baby_binary",
+        "dnn_model": {
+            "hidden_layers": [32, 32]
+        }
+    },
+
+    "train": {
+        "epochs": 100,
+        "learning_rate": 0.01
     }
 }
