Regex from config
Added fields in config.json to store electrodes and waves used.
Modified data.py to utilize these when creating the regex that reduces the dataframe of EEG data.

--- a/config.json
+++ b/config.json
@@ -5,7 +5,9 @@
     },
 
     "data": {
-        "subjects": ["bradley", "johnathan", "vishal", "parker"]
+        "subjects": ["bradley", "johnathan", "vishal", "parker"],
+        "electrodes": ["AF3", "F7", "F3", "FC5", "FC6", "F4", "F8", "AF4"],
+        "waves": ["BetaL"]
     },
 
     "model": {
